@@ -220,8 +220,8 @@ class CmdOutputDirArg(CmdFileArg):
 
 class command_output(Task.Task):
 	m_color = "BLUE"
-	def __init__(self, env, priority, command, command_node, command_args, stdin, stdout, cwd, os_env):
-		Task.Task.__init__(self, env, prio=priority, normal=1)
+	def __init__(self, env, command, command_node, command_args, stdin, stdout, cwd, os_env):
+		Task.Task.__init__(self, env, normal=1)
 		assert isinstance(command, (str, Node.Node))
 		self.command = command
 		self.command_args = command_args
@@ -393,7 +393,7 @@ use command_is_external=True''') % (self.command,)
 			fatal("command-output objects must have at least one output file")
 
 		task = command_output(self.env, None, cmd, cmd_node, self.argv, stdin, stdout, cwd, self.os_env)
-		Utils.copy_attrs(self, task, 'before after prio ext_in ext_out', only_if_set=True)
+		Utils.copy_attrs(self, task, 'before after ext_in ext_out', only_if_set=True)
 		self.m_tasks.append(task)
 
 		task.set_inputs(inputs)
